--- a/index.html
+++ b/index.html
@@ -675,6 +675,22 @@
           "DvRvStPZG9uOmNvcmU6ZHZydi1ldS0xOmRldm8vM0RuZWswOXFCQjpwbHVnX3NldHRpbmcvMV9ffHxfXzIwMjQtMTItMjAgMDI6NTM6MTUuODM1NzgyMjM2ICswMDAwIFVUQw==xlxendsDvRv",
       });
     </script>
+
+    <!-- DevRev SearchAgent -->
+    <script>
+      window.plugSDK.init({
+        app_id:
+          "DvRvStPZG9uOmNvcmU6ZHZydi1ldS0xOmRldm8vM0RuZWswOXFCQjpwbHVnX3NldHRpbmcvMV9ffHxfXzIwMjQtMTItMjAgMDI6NTM6MTUuODM1NzgyMjM2ICswMDAwIFVUQw==xlxendsDvRv",
+        disable_plug_chat_window: true,
+      });
+
+      window.plugSDK.onEvent((payload) => {
+        if (payload.type === "ON_PLUG_WIDGET_READY") {
+          window.plugSDK.initSearchAgent();
+        }
+      });
+    </script>
+
     <!-- end owl carousel script -->
   </body>
 </html>
