--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
       window.plugSDK.init({
         app_id:
           "DvRvStPZG9uOmNvcmU6ZHZydi1ldS0xOmRldm8vM0RuZWswOXFCQjpwbHVnX3NldHRpbmcvMV9ffHxfXzIwMjQtMTItMjAgMDI6NTM6MTUuODM1NzgyMjM2ICswMDAwIFVUQw==xlxendsDvRv",
-        disable_plug_chat_window: false,
+        disable_plug_chat_window: true,
       });
 
       window.plugSDK.onEvent((payload) => {
