--- a/index.html
+++ b/index.html
@@ -679,9 +679,8 @@
     <!-- DevRev SearchAgent -->
     <script>
       window.plugSDK.init({
-        app_id:
-          "DvRvStPZG9uOmNvcmU6ZHZydi1ldS0xOmRldm8vM0RuZWswOXFCQjpwbHVnX3NldHRpbmcvMV9ffHxfXzIwMjQtMTItMjAgMDI6NTM6MTUuODM1NzgyMjM2ICswMDAwIFVUQw==xlxendsDvRv",
-        disable_plug_chat_window: false,
+        app_id: "don:core:dvrv-eu-1:devo/3Dnek09qBB:plug_setting/1",
+        disable_plug_chat_window: true,
       });
 
       window.plugSDK.onEvent((payload) => {
