--- a/CreateTKT.html
+++ b/CreateTKT.html
@@ -20,8 +20,8 @@
           applies_to_part: "PROD-2",
           // Replace with a valid part ID
           owned_by: ["DEVU-1"], // Replace with a valid user ID
-          title: "Test",
-          tags: [{ id: "TAG-1" }], // Replace with valid tag IDs
+          title: "cryptocurrency rate",
+          tags: [{ id: "TAG-3" }], // Replace with valid tag IDs
         };
 
         try {
